crates/nixon-picker/src/ui/snapshots/nixon_picker__ui__render__tests__a_colour_inside_a_candidate_does_not_run_to_the_end_of_the_line.snap
---
source: crates/nixon-picker/src/ui/render.rs
expression: draw(&mut app)
---
">                                                                            1/1"
"▌ build - Run x now                                                             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
