crates/nixon-picker/src/ui/snapshots/nixon_picker__ui__render__tests__ansi_in_a_candidate_does_not_leak_into_the_frame.snap
---
source: crates/nixon-picker/src/ui/render.rs
expression: draw(&mut app)
---
">                                                                               "
"> green branch                                                                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
