crates/nixon-picker/src/ui/snapshots/nixon_picker__ui__render__tests__highlighting_keeps_the_candidates_own_colours.snap
---
source: crates/nixon-picker/src/ui/render.rs
expression: draw(&mut app)
---
"> gb                                                                         1/1"
"▌ green branch                                                                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
