crates/nixon-picker/src/ui/snapshots/nixon_picker__ui__render__tests__matched_characters_are_highlighted.snap
---
source: crates/nixon-picker/src/ui/render.rs
expression: draw(&mut app)
---
"> bld                                                                           "
"> build - Build the workspace                                                   "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
