crates/nixon-picker/src/ui/snapshots/nixon_picker__ui__render__tests__renders_a_filtered_list.snap
---
source: crates/nixon-picker/src/ui/render.rs
expression: draw(&mut app)
---
"> co                                                                         2/9"
"▌ coverage - Build the HTML coverage report                                     "
"  docs - Build and open the documentation                                       "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
