crates/nixon-picker/src/ui/snapshots/nixon_picker__ui__render__tests__renders_a_scrolled_list.snap
---
source: crates/nixon-picker/src/ui/render.rs
expression: "format!(\"{}\", terminal.backend())"
---
">                                                                            9/9"
"  docs - Build and open the documentation                                       "
"  fmt - Format Rust, TOML and Nix sources                                       "
"  lint - Clippy with warnings denied                                            "
"▌ run - Run nixon from the workspace                                            "
