crates/nixon-picker/src/ui/snapshots/nixon_picker__ui__render__tests__renders_an_empty_picker.snap
---
source: crates/nixon-picker/src/ui/render.rs
expression: draw(&mut app)
---
">                                                                            0/0"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
