crates/nixon-picker/src/ui/snapshots/nixon_picker__ui__render__tests__renders_no_matches.snap
---
source: crates/nixon-picker/src/ui/render.rs
expression: draw(&mut app)
---
"> zzz                                                                           "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
