crates/nixon-picker/src/ui/snapshots/nixon_picker__ui__render__tests__renders_the_full_list.snap
---
source: crates/nixon-picker/src/ui/render.rs
expression: draw(&mut app)
---
">                                                                               "
"> build - Build the workspace                                                   "
"  check - Everything CI runs                                                    "
"  coverage - Build the HTML coverage report                                     "
"  docs - Build and open the documentation                                       "
"  fmt - Format Rust, TOML and Nix sources                                       "
"  lint - Clippy with warnings denied                                            "
"  run - Run nixon from the workspace                                            "
"  tdd - Reloading test session                                                  "
"  test - Run the test suite                                                     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
